fix(tds-radio-button): focus outline and gap

--- a/packages/core/src/components/radio-button/radio-button.scss
+++ b/packages/core/src/components/radio-button/radio-button.scss
@@ -24,8 +24,7 @@
     align-self: flex-start;
 
     + label {
-      padding: var(--tds-spacing-element-4) 0 var(--tds-spacing-element-4)
-        var(--tds-spacing-element-4);
+      padding: var(--tds-spacing-element-4) 0 var(--tds-spacing-element-4) 6px;
       cursor: pointer;
     }
 
@@ -62,8 +61,7 @@
     &:focus-visible {
       &::before {
         background-color: var(--tds-radio-button-background-focus);
-
-        // animation: rb-focus 0.4s cubic-bezier(0.65, 0.05, 0.38, 0.95) forwards;
+        box-shadow: 0 0 0 1px var(--tds-radio-button-background-focus);
         animation: rb-focus var(--tds-motion-duration-moderate-02) var(--tds-motion-easing-enter)
           forwards;
       }
